--- a/src/less/post.less
+++ b/src/less/post.less
@@ -146,6 +146,18 @@
 		}
 	}
 
+	.kg-gallery-container {
+
+	}
+
+	.kg-gallery-row {
+
+	}
+
+	.kg-gallery-image {
+
+	}
+
 	.main-header,
 	.main-navigation,
 	.sidebar {
