--- a/custom-confirm-email.hbs
+++ b/custom-confirm-email.hbs
@@ -21,6 +21,7 @@
 			<div class="card">
 				<h1>{{{title}}}</h1>
 				<p>{{content}}</p>
+				<a href="https://hackersandslackers.com/">Back to site</a>
 			</div>
 
 		{{/post}}
