--- a/src/less/transactional.less
+++ b/src/less/transactional.less
@@ -1,7 +1,8 @@
 @import "variables.less";
 
 .transactional {
-      background: linear-gradient(135deg,#6c61e4,#3264da);
+
+      background: linear-gradient(135deg,#7d73e4,#0b2971);
       width: 100%;
       height: 100%;
       position: relative;
@@ -9,7 +10,7 @@
       .card {
         position: absolute;
         margin: auto;
-        height: 350px;
+        height: 300px;
         width: 600px;
         background-color: #fff;
         left: 0;
@@ -18,5 +19,17 @@
         bottom: 0;
         padding: 30px;
         text-align: center;
+
+        p {
+          margin: 20px 25px;
+        }
+
+        .btn {
+          display: block;
+          background:@theme-color;
+          color:white;
+          padding: 10px 20px;
+          margin-top: 40px;
+        }
       }
 }
