--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -266,11 +266,12 @@
 				display: inline-block;
 				align-items: center;
 				display: flex;
+				padding: 12px !important;
+
 			}
 
 			.series-image {
-				height: 80px;
-				width: 90px;
+				height: 63px;
 				min-width: 90px;
 				display: flex;
 				align-items: center;
