--- a/src/less/login.less
+++ b/src/less/login.less
@@ -1,16 +1,20 @@
 @import "variables.less";
 .menu-wrapper {
   position: absolute;
-  right: 38px;
-  top: 77px;
+  right: 40px;
+    top: 73px;
   box-shadow: 0 0 5px rgba(65,67,144,.15);
   overflow-x: hidden;
   width: 250px;
   height: fit-content;
+  z-index: 3;
+  opacity: 0;
+  transition: all .5s easeout;
 
 
-
-
+  .active {
+    background:white;
+  }
 
 .dropdown-menu {
     height: 330px;
