--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -155,6 +155,17 @@
 		padding: 30px 40px 0 0;
 		margin: 0;
 		list-style: none;
+		align-items: center;
+
+		.account {
+			width:35px;
+			height:35px;
+
+			* {
+				width: 100%;
+				height: 100%;
+			}
+		}
 
 		@media(max-width: 800px) {
 			max-width: 234px;
@@ -171,6 +182,7 @@
 			display: inline-block;
 			position: relative;
 			text-shadow: 0px 0px 30px black;
+			line-height: 1;
 
 			a {
 				color: #fff;
@@ -223,6 +235,8 @@
 						color: @text-color;
 					}
 				}
+
+
 
 				&:hover > a {
 					cursor: pointer;
