--- a/src/less/login.less
+++ b/src/less/login.less
@@ -2,8 +2,9 @@
 .menu-wrapper {
   position: absolute;
   right: 40px;
-    top: 73px;
-  box-shadow: 0 0 5px rgba(65,67,144,.15);
+  top: 79px;
+  border-bottom: 1px solid #8596B1;
+    border-right: 1px solid #8596b3;
   overflow-x: hidden;
   width: 250px;
   height: fit-content;
@@ -64,6 +65,10 @@
     -webkit-transition: all .6s easeout;
     transition: all .6s easeout;
     height:100%
+  }
+
+  #login {
+    left:0;
   }
 
   form {
@@ -169,6 +174,7 @@
     color: #009c83;
     border: 1px solid #009c83;
     background: white;
+    left:300px;
   }
 
   .forgot {
