--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -2,10 +2,13 @@
 	{{#foreach navigation}}
 		<li class="nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
 	{{/foreach}}
-	<li class="account">
-		<img src="https://hackersandslackers.nyc3.cdn.digitaloceanspaces.com/user.png">>
+	<li id="account">
+		<img src="https://hackersandslackers.nyc3.cdn.digitaloceanspaces.com/user.png">
+		<div class="accountback"></div>
 	</li>
 </ul>
+
+
 <div class="menu-wrapper">
 	<div class="dropdown-menu">
 		<div id="login">
@@ -14,24 +17,11 @@
 				<label for="login-email">Email:</label>
 				<input type="text" class="form-control" id="login-email" aria-label="login-email" />
 				<label for="login-password">Password:</label>
-				<input type="password" class="form-control" id="login-password" aria-label="login-password" />
+				<input type="password" class="form-control" id="login-password" aria-label="login-password" /></label>
 				<button class="btn btn-success" onclick="handleLogin()">Log on</button>
 			</form>
-			<a class="secondarylink">Create an Account <i class="far fa-arrow-right"></i></a>
+			<a href="/signup-post" class="secondarylink">Create an Account <i class="far fa-arrow-right"></i></a>
 		</div>
-
-		<div id="signup">
-			<h4>Sign up</h4>
-			<form>
-				<label for="create-a-user-email">Email:</label>
-				<input type="text" class="form-control" id="create-a-user-email" aria-label="create-a-user-email" />
-				<label for="create-a-user-password">Password:</label>
-				<input type="password" class="form-control" id="create-a-user-password" aria-label="create-a-user-password" />
-				<button class="btn btn-success" onclick="handleSignup()">Create Account</button>
-			</form>
-			<a class="secondarylink">Sign in</a>
-		</div>
-
 		<div id="info">
 			<div id="success"></div>
 			<div id="error"></div>
@@ -41,236 +31,184 @@
 
 
 
-<div id="resend-confirmation" hidden>
-	<h4>Send a New Confirmation Email</h4>
-	<label for="resend-confirmation-email">Email:</label>
-	<div class="input-group mb-1">
-		<input type="text" class="form-control" id="resend-confirmation-email" aria-label="resend-confirmation-email" />
-      </div>
-
-		<button class="btn btn-success" onclick="handleResendConfirmation()">
-        Re-Send Confirmation Email
-      </button>
-		<button class="btn btn-secondary" onclick="showControlPanel()">
-        Go Back
-      </button>
-	</div>
-
-	<script>
-		"use strict";
-
-		$(document).ready(function() {
-			$('.dropdown-menu a').on('click', function(event) {
-				event.preventDefault();
-				return false;
-			});
-
-			$('.dropdown-menu .btn').on('click', function(event) {
-				event.preventDefault();
-				return false;
-			});
-		});
-
-
-		const {
-			Stitch,
-			UserPasswordAuthProviderClient,
-			UserPasswordCredential
-		} = stitch;
-
-		const stitchClient = Stitch.initializeDefaultAppClient("stitch-quickstarts-zhpox");
-
-		const emailPasswordClient = stitchClient.auth
-			.getProviderClient(UserPasswordAuthProviderClient.factory, "userpass");
-
-		// Register a new application user when the user submits their information
-		async function handleSignup() {
-			const email = registerEmailEl.value;
-			const password = registerPasswordEl.value;
-
-			try {
-
-				await emailPasswordClient.registerWithEmail(email, password)
-				showPostRegistrationState()
-				displaySuccess("Successfully registered. Check your inbox for a confirmation email.")
-
-			} catch (e) {
-				handleError(e)
-			}
-		}
-
-		// Authenticate an application user based on the submitted information
-		async function handleLogin() {
-			const email = loginEmailEl.value;
-			const password = loginPasswordEl.value;
-			const credential = new UserPasswordCredential(email, password);
-
-			try {
-
-				await stitchClient.auth.loginWithCredential(credential);
-				const user = stitchClient.auth.user;
-				showLoggedInState();
-				displaySuccess(`Logged in as: ${user.profile.data.email}`)
-
-			} catch (e) {
-				handleError(e)
-			}
-		}
-
-		async function handleLogout() {
-			await stitchClient.auth.logout();
-			showControlPanel();
-		}
-
-		async function handleResendConfirmation() {
-			const email = resendConfirmationEmailEl.value;
-			await emailPasswordClient.resendConfirmationEmail(email);
-			showControlPanel();
-		}
-
-		// DOM Element Variables
-		const resendConfirmationEl = document.getElementById("resend-confirmation");
-		const controlPanelEl = document.getElementById("control-panel");
-		const registerFormEl = document.getElementById("create-a-user");
-		const loginFormEl = document.getElementById("login");
-		const registerEmailEl = document.getElementById("create-a-user-email");
-		const registerPasswordEl = document.getElementById("create-a-user-password");
-		const resendConfirmationEmailEl = document.getElementById("resend-confirmation-email");
-		const loginEmailEl = document.getElementById("login-email");
-		const loginPasswordEl = document.getElementById("login-password");
-		const notificationEl = document.getElementById("info");
-		const loggedInEl = document.getElementById("logged-in");
-		const postRegistrationEl = document.getElementById("finished-registration");
-
-		const successEl = document.getElementById("success");
-		const errorEl = document.getElementById("error");
-
-		// Notification Functions
-		function displayError(errorMessage) {
-			clearNotifications();
-			errorEl.innerText = errorMessage;
-			$('#error').css('display', 'block');
-			$('#info').css('display', 'block');
-		}
-
-		function displaySuccess(successMessage) {
-			clearNotifications();
-			$('#success').css('display', 'block');
-			$('#info').css('display', 'block');
-			successEl.innerText = successMessage
-		}
-
-		function clearNotifications() {
-			[errorEl, successEl].forEach(el => el.innerText = "")
-		}
-
-		// Helper Functions
-		function clearFields(fields) {
-			fields.forEach(field => field.value = "")
-		}
-
-		function toggleHiddenElementById(id) {
-			document.getElementById(id).classList.toggle("hidden");
-		}
-
-		// UI State Transitions
-		function showRegistrationForm() {
-			clearNotifications();
-			resendConfirmationEl.hidden = true;
-			controlPanelEl.hidden = true;
-			registerFormEl.hidden = false;
-			loggedInEl.hidden = true;
-			postRegistrationEl.hidden = true;
-		}
-
-		function showLoginForm() {
-			clearNotifications();
-			resendConfirmationEl.hidden = true;
-			controlPanelEl.hidden = true;
-			loginFormEl.hidden = false;
-			loggedInEl.hidden = true;
-			postRegistrationEl.hidden = true;
-		}
-
-		function showControlPanel() {
-			clearNotifications()
-			resendConfirmationEl.hidden = true;
-			controlPanelEl.hidden = false;
-			loginFormEl.hidden = true;
-			registerFormEl.hidden = true;
-			loggedInEl.hidden = true;
-			postRegistrationEl.hidden = true;
-		}
-
-		function showResendConfirmationForm() {
-			clearNotifications()
-			resendConfirmationEl.hidden = false;
-			controlPanelEl.hidden = true;
-			loginFormEl.hidden = true;
-			registerFormEl.hidden = true;
-			loggedInEl.hidden = true;
-			postRegistrationEl.hidden = true;
-		}
-
-		function showLoggedInState() {
-			clearFields([loginEmailEl, loginPasswordEl]);
-			clearNotifications()
-			resendConfirmationEl.hidden = true;
-			controlPanelEl.hidden = true;
-			loginFormEl.hidden = true;
-			registerFormEl.hidden = true;
-			loggedInEl.hidden = false;
-			postRegistrationEl.hidden = true;
-		}
-
-		function showPostRegistrationState() {
-			clearFields([registerEmailEl, registerPasswordEl]);
-			resendConfirmationEl.hidden = true;
-			controlPanelEl.hidden = true;
-			loginFormEl.hidden = true;
-			registerFormEl.hidden = true;
-			loggedInEl.hidden = true;
-			postRegistrationEl.hidden = false;
-		}
-
-		function setPostRegistrationState() {
-			// Clear registration form inputs then hide the form
-			clearFields([registerEmailEl, registerPasswordEl]);
-			toggleHiddenElementById("create-a-user");
-			return Promise.resolve()
-		}
-
-		function handleError(err) {
-			console.error(err)
-			const errType = err.message || "Error!"
-			const msg = ({
-				"invalid username/password": "Invalid username or password was entered. Please try again.",
-				"name already in use": "An account already exists for that email."
-			})[errType] || errType
-			displayError(msg);
-			$('#info').css('opacity', '1');
-		}
-
-
-		$('.secondarylink').on('click', function(event) {
+<script>
+	"use strict";
+		$('#account').on('click', function(event) {
 			event.preventDefault();
-			$('#signup').animate({
-				left: '-300'
-			}, 500);
-			$('#login').animate({
-				left: '0'
-			}, 500);
-			$('.secondarylink').off();
 			return false;
 		});
 
-$('account').on('click', function (event){
-	event.preventDefault();
-	$(this).css('background', 'white');
-	$(this).css('padding', '7px');
-	$(this).css('background', 'white');
-	$('menu-wrapper').css('opacity', 1);
+		$('.dropdown-menu .btn').on('click', function(event) {
+			event.preventDefault();
+			return false;
+		});
 
-})
 
-	</script>
+
+	const {
+		Stitch,
+		UserPasswordAuthProviderClient,
+		UserPasswordCredential
+	} = stitch;
+
+	const stitchClient = Stitch.initializeDefaultAppClient("hackers-uangn");
+	const emailPasswordClient = stitchClient.auth.getProviderClient(UserPasswordAuthProviderClient.factory, "userpass");
+
+
+
+	// Authenticate an application user based on the submitted information
+	async function handleLogin() {
+		const email = loginEmailEl.value;
+		const password = loginPasswordEl.value;
+		const credential = new UserPasswordCredential(email, password);
+
+		try {
+			await stitchClient.auth.loginWithCredential(credential);
+			const user = stitchClient.auth.user;
+			showLoggedInState();
+			displaySuccess(`Logged in as: ${user.profile.data.email}`)
+
+		} catch (e) {
+			handleError(e)
+		}
+	}
+
+	async function handleLogout() {
+		await stitchClient.auth.logout();
+		showControlPanel();
+	}
+
+	async function handleResendConfirmation() {
+		const email = resendConfirmationEmailEl.value;
+		await emailPasswordClient.resendConfirmationEmail(email);
+		showControlPanel();
+	}
+
+	// DOM Element Variables
+	const loginFormEl = document.getElementById("login");
+	const loginEmailEl = document.getElementById("login-email");
+	const loginPasswordEl = document.getElementById("login-password");
+	const notificationEl = document.getElementById("info");
+	const loggedInEl = document.getElementById("logged-in");
+	const successEl = document.getElementById("success");
+	const errorEl = document.getElementById("error");
+
+	// Notification Functions
+	function displayError(errorMessage) {
+		clearNotifications();
+		errorEl.innerText = errorMessage;
+		$('#error').css('display', 'block');
+		$('#info').css('display', 'block');
+	}
+
+	function displaySuccess(successMessage) {
+		clearNotifications();
+		$('#success').css('display', 'block');
+		$('#info').css('display', 'block');
+		successEl.innerText = successMessage
+	}
+
+	function clearNotifications() {
+		[errorEl, successEl].forEach(el => el.innerText = "")
+	}
+
+	// Helper Functions
+	function clearFields(fields) {
+		fields.forEach(field => field.value = "")
+	}
+
+	function toggleHiddenElementById(id) {
+		document.getElementById(id).classList.toggle("hidden");
+	}
+
+	// UI State Transitions
+	function showRegistrationForm() {
+		clearNotifications();
+		resendConfirmationEl.hidden = true;
+		controlPanelEl.hidden = true;
+		registerFormEl.hidden = false;
+		loggedInEl.hidden = true;
+		postRegistrationEl.hidden = true;
+	}
+
+	function showLoginForm() {
+		clearNotifications();
+		resendConfirmationEl.hidden = true;
+		controlPanelEl.hidden = true;
+		loginFormEl.hidden = false;
+		loggedInEl.hidden = true;
+		postRegistrationEl.hidden = true;
+	}
+
+	function showControlPanel() {
+		clearNotifications()
+		resendConfirmationEl.hidden = true;
+		controlPanelEl.hidden = false;
+		loginFormEl.hidden = true;
+		registerFormEl.hidden = true;
+		loggedInEl.hidden = true;
+		postRegistrationEl.hidden = true;
+	}
+
+	function showResendConfirmationForm() {
+		clearNotifications()
+		resendConfirmationEl.hidden = false;
+		controlPanelEl.hidden = true;
+		loginFormEl.hidden = true;
+		registerFormEl.hidden = true;
+		loggedInEl.hidden = true;
+		postRegistrationEl.hidden = true;
+	}
+
+	function showLoggedInState() {
+		clearFields([loginEmailEl, loginPasswordEl]);
+		clearNotifications()
+		resendConfirmationEl.hidden = true;
+		controlPanelEl.hidden = true;
+		loginFormEl.hidden = true;
+		registerFormEl.hidden = true;
+		loggedInEl.hidden = false;
+		postRegistrationEl.hidden = true;
+	}
+
+	function showPostRegistrationState() {
+		clearFields([registerEmailEl, registerPasswordEl]);
+		resendConfirmationEl.hidden = true;
+		controlPanelEl.hidden = true;
+		loginFormEl.hidden = true;
+		registerFormEl.hidden = true;
+		loggedInEl.hidden = true;
+		postRegistrationEl.hidden = false;
+	}
+
+	function setPostRegistrationState() {
+		// Clear registration form inputs then hide the form
+		clearFields([registerEmailEl, registerPasswordEl]);
+		toggleHiddenElementById("create-a-user");
+		return Promise.resolve()
+	}
+
+	function handleError(err) {
+		console.error(err)
+		const errType = err.message || "Error!"
+		const msg = ({
+			"invalid username/password": "Invalid username or password was entered. Please try again.",
+			"name already in use": "An account already exists for that email."
+		})[errType] || errType
+		displayError(msg);
+		$('#info').css('opacity', '1');
+	}
+
+	$('#account').on('click', function(event) {
+		event.preventDefault();
+
+		$('.accountback').animate({
+			opacity: 1
+		}, 500, 'swing');
+
+		$('.menu-wrapper').animate({
+			opacity: 1
+		}, 500, 'swing');
+		return false;
+	});
+</script>
