--- a/partials/widget-newsletter.hbs
+++ b/partials/widget-newsletter.hbs
@@ -3,12 +3,12 @@
 	<h4 class="title">{{t "Newsletter"}}</h4>
 	<div class="content newsletter">
 		<div id="newsletter_signup">
-			<form action="#" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
+			<form action="#" method="post" id="newsletter-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
 				<div class="input-group">
 					<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your email...">
 				</div>
 				<div class="input-group">
-					<input type="submit" value="{{t "Subscribe"}}" name="subscribe" id="embedded-subscribe" class="btn btn-default">
+					<input type="submit" value="{{t "Subscribe"}}" name="subscribe" id="newsletter-subscribe" class="btn btn-default">
 				</div>
 			</form>
 		</div>
