--- a/partials/widget-sendgrid.hbs
+++ b/partials/widget-sendgrid.hbs
@@ -3,7 +3,11 @@
 	 <div class="newsletter input-group">
     {{#if @labs.subscribers}}
       <section class="gh-subscribe">
-        {{subscribe_form placeholder="Your email address"}}
+        {{subscribe_form
+          placeholder="Your email address"
+           button_class="btn"
+           button_id="newsletterbtn"
+        }}
         {{!--<span class="gh-subscribe-rss">or subscribe <a href="http://cloud.feedly.com/#subscription/feed/{{@blog.url}}/rss/"><i class="fas fa-rss"></i></a></span>--}}
       </section>
     {{/if}}
