--- a/src/less/global.less
+++ b/src/less/global.less
@@ -169,6 +169,7 @@ input[type="search"],
 input[type="text"],
 input[type="url"],
 input[type="email"],
+input[type="password"]
 textarea {
 	padding: 7px;
 	border: 1px solid @border-color;
