--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -25,7 +25,7 @@
 		margin: auto;
 		height: fit-content;
 		max-height: 63px;
-		z-index: 100;
+		z-index: 9;
 		transition: all .3s easeout;
 
 		@media(max-width: 800px) {
@@ -156,15 +156,21 @@
 		margin: 0;
 		list-style: none;
 		align-items: center;
+		position: relative;
+		    z-index: 10;
 
 		#account {
 			width:35px;
 			height:35px;
 			background-color: rgba(255, 255,255, 0);
 			padding: 7px;
-			transition: all .4s easeInOutCubic;
+			transition: all .1s ease-out;
 			 position: relative;
 			border-right: 1px solid rgba(255, 255,255, 0);
+
+			&:hover {
+				cursor: pointer;
+			}
 
 			.accountback {
 				opacity: 0;
@@ -212,7 +218,7 @@
 				font-size: 16px;
 				font-weight: 300;
 		    letter-spacing: .5px;
-		    transition: all .2s ease-out;
+		    transition: all .1s ease-out;
 				@media(max-width: 800px) {
 					padding: 0;
 					font-weight: 500;
@@ -248,7 +254,7 @@
 				width: 200px;
 				z-index: 999;
 				.opacity(0);
-				.transition(all 0.2s ease);
+				.transition(all 0.1s ease);
 
 				li {
 					a {
